## v0.6.3:

* Instances return different message when no instances vs non existent stack
* Updating rvm to ruby 1.9.3-p327
* Updated to stackster version 0.4.0

## v0.6.2

* Corrected the deploy command so it exits if a stack update fails
* Fixed help so it shows all commands
* Refactored the outputs command to show less whitespace

## v0.6.1

* Corrected the clone command so it accepts new attributes
* Added ability to pass config data into Config class which avoids having to have a .simple_deploy.yml file.
* Config file reads SIMPLE_DEPLOY_CONFIG_FILE for alternate config file location.

## v0.6.0

* Updated so it no longer caches simpledb attributes so it works better with stackster changes
* Upgraded to stackster 0.3.2
* Added execute subcommand to run arbitray commands against stack
* Refactored deployment to use ssh library
* Added specs

## v0.5.6

* Corrected the instances command so it returns all instances
* Updated the clone command so it can take a new template for the new stack
* Added region to the message notifications
* Fixed deployments so they don't try to deploy if the attributes fail to update

## v0.5.5

* Added backoff functionality to updates so they work better with the force option
* Now publishes a message when the deployment starts

## v0.5.4

* Added support for internal networking to the deploy and instances commands
* Added backoff functionality to deployments so they work better with the force option

## v0.5.3

* Added a clone command that clones a stack
* Updated the protect command so it allows multiple stacks
* Updated the instances command so it tells the user when the stack does not exist
* Updated the outputs command to make the output values easier to read

## v0.5.2

* Upgrade to stackster 0.3.0
* Corrected handling of attributes on stack creation

## v0.5.1:

* Corrected the use of the domain attribute in URLs during deployments
* Corrected the use of the force option during deployments